force-app/main/default/objects/Position_Name__c/fields/Education_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Education_Requirement__c</fullName>
    <label>Education Requirement</label>
    <length>10</length>
    <type>Text</type>
</CustomField>