force-app/main/default/objects/Position_Name__c/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <label>Functional  Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fianance,</fullName>
                <default>true</default>
                <label>Fianance,</label>
            </value>
            <value>
                <fullName>Resource,</fullName>
            </value>
            <value>
                <fullName>Information Technology,</fullName>
            </value>
            <value>
                <fullName>Retail Operation,</fullName>
            </value>
            <value>
                <fullName>Warehosuing,</fullName>
            </value>
            <value>
                <fullName>miscellaneous,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>