force-app/main/default/objects/Position_Name__c/fields/HTML_CSS__c.field-meta.xml
<CustomField>
    <fullName>HTML_CSS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HTML/CSS</label>
    <type>Checkbox</type>
</CustomField>