force-app/main/default/objects/Position_Name__c/fields/Job_Label__c.field-meta.xml
<CustomField>
    <fullName>Job_Label__c</fullName>
    <label>Job Label</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Functional_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FN-100,</fullName>
            </value>
            <value>
                <fullName>FN-200,</fullName>
            </value>
            <value>
                <fullName>FN-300,</fullName>
            </value>
            <value>
                <fullName>FN-400,</fullName>
            </value>
            <value>
                <fullName>HR-100,</fullName>
            </value>
            <value>
                <fullName>HR-200,</fullName>
            </value>
            <value>
                <fullName>HR-300,</fullName>
            </value>
            <value>
                <fullName>HR-400,</fullName>
            </value>
            <value>
                <fullName>IT-100,</fullName>
            </value>
            <value>
                <fullName>IT-200,</fullName>
            </value>
            <value>
                <fullName>IT-300,</fullName>
            </value>
            <value>
                <fullName>IT-400,</fullName>
            </value>
            <value>
                <fullName>RO-100,</fullName>
            </value>
            <value>
                <fullName>RO-200,</fullName>
            </value>
            <value>
                <fullName>RO-300,</fullName>
            </value>
            <value>
                <fullName>RO-400,</fullName>
            </value>
            <value>
                <fullName>MS-100,</fullName>
            </value>
            <value>
                <fullName>MS-200,</fullName>
            </value>
            <value>
                <fullName>MS-300,</fullName>
            </value>
            <value>
                <fullName>MS-400,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>