force-app/main/default/objects/Position_Name__c/fields/Max_Pay__c.field-meta.xml
<CustomField>
    <fullName>Max_Pay__c</fullName>
    <label>Max Pay</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>