force-app/main/default/objects/Position_Name__c/fields/Min_Pay__c.field-meta.xml
<CustomField>
    <fullName>Min_Pay__c</fullName>
    <description>Min Pay for position</description>
    <label>Min Pay</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>