force-app/main/default/objects/Position_Name__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed- Failed,</fullName>
            </value>
            <value>
                <fullName>Closed-Not Approved</fullName>
            </value>
            <value>
                <fullName>New Position</fullName>
            </value>
            <value>
                <fullName>Open Approved</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>