force-app/main/default/objects/Position_Name__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor,</fullName>
            </value>
            <value>
                <fullName>Full Time,</fullName>
            </value>
            <value>
                <fullName>Internship,</fullName>
            </value>
            <value>
                <fullName>Part Time,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>