force-app/main/default/objects/Position_Name__c/fields/XML__c.field-meta.xml
<CustomField>
    <fullName>XML__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XML</label>
    <type>Checkbox</type>
</CustomField>