force-app/main/default/objects/Position_Name__c/validationRules/Max_Salary_Greater_than_Mix_Salary.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Salary_Greater_than_Mix_Salary</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Pay__c &gt; Max_Pay__c</errorConditionFormula>
    <errorDisplayField>Min_Pay__c</errorDisplayField>
    <errorMessage>Minimum Salary Should Not Be greater than Maximum Salary</errorMessage>
</ValidationRule>